<?xml version="1.0"?>
<package format="3">
  <name>dg_bolt</name>
  <version>1.0.0</version>
  <description>
    Wrap the Bolt drivers into the dynamic-graph.
  </description>
  <author email="mnaveau@tue.mpg.de">Maximilien Naveau</author>
  <maintainer email="mnaveau@tue.mpg.de">Maximilien Naveau</maintainer>
  <license> BSD 3-Clause </license>
  <buildtool_depend> catkin </buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend> blmc_drivers </depend>
  <depend> blmc_robots </depend>
  <depend> bolt </depend>
  <depend> yaml_utils </depend>
  <depend> dynamic_graph_manager </depend>
  <depend> pinocchio_bullet </depend>

    <!-- ROS2 message generation. -->
    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
